Findbugs fixes in org.eclipse.osee.framework.manager.servlet